# xrouter

./: .clinerules  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PLAN.md  README.md  docker-compose.yml  justfile
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: rust-ci.yml  xrouter-browser-release.yml
browser-demo/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
browser-demo/src/: App.svelte  app.css  app.d.ts
browser-demo/src/lib/: wasm-client.ts
common/limiter/: limiter.go
common/limiter/lua/: rate_limit.lua
constant/: channel_setting.go  env.go  user_setting.go
controller/: channel-test.go  channel.go  github.go  linuxdo.go  midjourney.go  misc.go  oidc.go  option.go  playground.go  pricing.go  redemption.go  relay.go  setup.go  task.go  telegram.go  token.go  topup.go  usedata.go  user.go  wechat.go
docs/: 100000-lines-of-rust.md  100000-lines-of-rust.txt  rust_codegen_rules_setup_playbook.md  rust_test_pattern_playbook.md
docs-old/: README.md
docs/api/: api_auth.md
docs/channel/: other_setting.md
docs/formal/: kernel_state_machine.cfg  kernel_state_machine.tla  open-formalization-questions.md  property-map.md  trace-schema.md
docs/installation/: BT.md
docs/models/: Midjourney.md  Rerank.md  Suno.md
dto/: openai_request.go  openai_response.go  suno.go
formal/: README.md  open-formalization-questions.md  property-map-billing.md  property-map.md  trace-schema.md  xrouter.cfg  xrouter.tla  xrouter_billing.cfg  xrouter_billing.tla
middleware/: auth.go  distributor.go  model-rate-limit.go
model/: ability.go  cache.go  channel.go  log.go  midjourney.go  option.go  redemption.go  task.go  token.go  token_cache.go  usedata.go  user.go
relay/: claude_handler.go  relay-audio.go  relay-image.go  relay-mj.go  relay-responses.go  relay-text.go  relay_embedding.go  relay_rerank.go  relay_task.go  websocket.go
relay/helper/: common.go  model_mapped.go
router/: relay-router.go
scripts/: cloudru_completions.sh  cloudru_models.sh  get_openrouter_models.sh  test_chat_completion-local.sh  test_responses-local.sh
service/: audio.go  error.go  image.go  midjourney.go  token_counter.go
setting/: chat.go  sensitive.go  user_usable_group.go
setting/config/: config.go
setting/model_setting/: claude.go  gemini.go  global.go
setting/operation_setting/: general_setting.go  model-ratio.go  tools.go
src/: app.py  main.py
src/api/docs/: __init__.py  chat_completion.py  openai_responses.py  responses.py
src/api/middleware/: auth.py  error_handler.py  request_id.py
src/api/routes/: base.py  chat_completion.py  gigachat_completions.py  health.py  info.py  models.py  responses.py
src/auth/: __init__.py  user_auth_service.py
src/auth/xauth/: __init__.py  client.py  models.py
src/core/: __init__.py  cache.py  config.py  logger.py  settings.py
src/di/: __init__.py  dependencies.py  setup.py
src/providers/: base.py  base_mapper.py  base_model_mapper.py  factory.py  manager.py  mapper_factory.py  model_mapper_factory.py
src/providers/agents/: __init__.py  model_mapper.py  provider.py
src/providers/deepseek/: __init__.py  mapper.py  model_mapper.py  models.py
src/providers/gigachat/: __init__.py  mapper.py  model_mapper.py  provider.py
src/providers/gigachat/models/: __init__.py  api.py  provider.py
src/providers/models/: __init__.py  model.py  provider.py
src/providers/models/api/: __init__.py  errors.py  request.py  response.py
src/providers/models/base/: __init__.py  (+6 more)
src/providers/ollama/: __init__.py  model_mapper.py  provider.py
src/providers/openrouter/: __init__.py  mapper.py  model_mapper.py
src/providers/openrouter_proxy/: __init__.py  model_mapper.py  provider.py
src/providers/xrouter/: __init__.py  mapper.py  model_mapper.py  provider.py
src/providers/yandex/: mapper.py  model_mapper.py  models.py  provider.py
src/providers/zai/: __init__.py  mapper.py  model_mapper.py  provider.py
src/router/base/: __init__.py  providers.py
src/router/chat_completion/: __init__.py  context_service.py  handler_chain.py  handler_chain_factory.py  service.py
src/router/responses/: __init__.py
src/router/usage/: __init__.py  client.py
web/: index.html
web/src/: index.css
xrouter/: .env.example  Cargo.toml  dev.sh  justfile
xrouter/crates/xrouter-app/: Cargo.toml
xrouter/crates/xrouter-app/src/: app_state.rs  config.rs  lib.rs  main.rs
xrouter/crates/xrouter-app/src/http/: auth.rs  docs.rs  errors.rs  mod.rs
xrouter/crates/xrouter-app/src/http/routes/: basic.rs  inference.rs  mod.rs
xrouter/crates/xrouter-app/src/startup/: app_builder.rs  mod.rs  model_catalog.rs  model_catalog_remote.rs  model_catalog_sources.rs  provider_factory.rs
xrouter/crates/xrouter-browser/: ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md
xrouter/crates/xrouter-browser/src/: bindings.rs  discovery.rs  error.rs  inference.rs  lib.rs  runtime.rs
xrouter/crates/xrouter-clients-openai/: Cargo.toml
xrouter/crates/xrouter-clients-openai/src/: lib.rs  model_discovery.rs  models.rs  parser.rs  protocol.rs  runtime.rs  transport.rs
xrouter/crates/xrouter-clients-openai/src/clients/: deepseek.rs  gigachat.rs  mock.rs  mod.rs  openai.rs  openrouter.rs  xrouter.rs  yandex.rs  zai.rs
xrouter/crates/xrouter-clients-usage/: Cargo.toml
xrouter/crates/xrouter-clients-usage/src/: lib.rs
xrouter/crates/xrouter-contracts/: Cargo.toml
xrouter/crates/xrouter-contracts/src/: lib.rs
xrouter/crates/xrouter-core/: Cargo.toml
xrouter/crates/xrouter-core/src/: lib.rs
xrouter/crates/xrouter-observability/: Cargo.toml
xrouter/crates/xrouter-observability/src/: config.rs  lib.rs  preflight.rs
xrouter/crates/xrouter-observability/src/exporters/: mod.rs  otlp.rs  stdout.rs
xrouter/docs/: ARCHITECTURE.md  PLAN.md  architecture.md  configuration.md  otel-tracing-report.md  testing.md  wasm-build-plan.md
xrouter/docs/wasm/: ARCHITECTURE.md  PLAN.md
xrouter/scripts/: check_models.sh  smoke_provider.sh
xrouter/wasm/: ARCHITECTURE.md  PLAN.md
(+58 files in other folders)
