[workspace]
members = [
  "crates/xrouter-app",
  "crates/xrouter-core",
  "crates/xrouter-contracts",
  "crates/xrouter-clients-openai",
  "crates/xrouter-clients-usage",
  "crates/xrouter-observability",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
futures = "0.3"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }
