[package]
name = "xrouter-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
dotenvy.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
ureq.workspace = true
xrouter-clients-openai = { path = "../xrouter-clients-openai" }
xrouter-contracts = { path = "../xrouter-contracts" }
xrouter-core = { path = "../xrouter-core", default-features = false }
xrouter-observability = { path = "../xrouter-observability" }

[dev-dependencies]
tower.workspace = true
