[package]
name = "xrouter-clients-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
xrouter-contracts = { path = "../xrouter-contracts" }
xrouter-core = { path = "../xrouter-core" }
