[package]
name = "xrouter-clients-usage"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
billing = ["xrouter-core/billing"]

[dependencies]
async-trait.workspace = true
tokio.workspace = true
xrouter-core = { path = "../xrouter-core", default-features = false }
