[package]
name = "xrouter-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
billing = []

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
xrouter-contracts = { path = "../xrouter-contracts" }
