[package]
name = "xrouter-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
xrouter-contracts = { path = "../xrouter-contracts" }

[dev-dependencies]
tokio.workspace = true
